<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:focusableInTouchMode="true"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbarLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:background="@drawable/circular_btn"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/appbarLayout"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:padding="50dp"
                android:src="@drawable/ic_image_white_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/image"
                android:layout_margin="@dimen/material_margin"
                android:background="@color/white"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/tf_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/admin_add_company_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/tf_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/admin_add_company_address" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5">

                        <EditText
                            android:id="@+id/tf_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/admin_add_company_mobile" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5">

                        <EditText
                            android:id="@+id/tf_landline"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/admin_add_company_landline" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/tf_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/admin_add_company_email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                        android:id="@+id/tf_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/admin_add_company_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                        android:id="@+id/tf_repassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/admin_add_company_re_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/add_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bg"
                    android:text="@string/admin_add_btn_name"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>